# news-provider-api

./: pyproject.toml  requirements.txt  vercel.json
.github/workflows/: schedule.yml
api/: index.py  test.py
api/models/: postgres_database.py
api/routes/getNews/: index.py
api/routes/news/: index.py
api/routes/update/: index.py
api/services/: get_news_bing.py  scraping_news.py
src/news_provider_api/: __init__.py
