[project]
name = "news-provider-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ota-takeru", email = "otataker@gmail.com" }
]
dependencies = [
    "newspaper3k>=0.2.8",
    "lxml[html_clean]>=5.3.0",
    "beautifulsoup4>=4.12.3",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/news_provider_api"]
